fixed button line valign

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2340,7 +2340,7 @@ header.home-header {
           font-family: 'FontAwesome';
           display: inline-block;
           // vertical-align: middle;
-          vertical-align: -0.05rem;
+          vertical-align: -0.08rem;
           // font-size: 0.96em;
           font-size: 1.18rem;
           color: $dark;
